# GPU_speedup

./: .gitignore  GPU_speedup.ipynb  GPU_vs_CPU.ipynb  README.md  pyproject.toml
gpu_speedup/: functions.py  wrapper.py
