[tool.poetry]
name = "gpu-speedup"
version = "0.1.0"
description = ""
authors = ["Marco Di Gennaro <mdg@atomistic-modelling.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
